--- a/TheYogaApp/ExerciseAssistant/templates/index.html
+++ b/TheYogaApp/ExerciseAssistant/templates/index.html
@@ -1,6 +1,8 @@
+{% load static %}
 <html>
 <head>
     <title>Home</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <h1>Index HTML page</h1>
