--- a/TheYogaApp/asanas/templates/base.html
+++ b/TheYogaApp/asanas/templates/base.html
@@ -1,34 +1,20 @@
 {% load static %}
 <html>
 <head>
-    <title>{% block title %}{% endblock title %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>The Yoga App | {% block title %}{% endblock title %}</title>
     {% block head %}{% endblock head %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">THE YOGA APP</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 {% block body %}
-{% endblock %}
+{% endblock body %}
+<footer>
+    <div class="bg-dark text-light text-center mb-0 bold fon-weight-bold">
+        <p>Copyright &copy; 2022</p>
+        <p>Made with <i class="fa fa-heart" style="color:red;"></i> in <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-india-flag-countrys-flags-justicon-lineal-color-justicon.png" style="width:30;height:30;"></p>
+    </div>
+</footer>
 </body>
 </html>
