--- a/TheYogaApp/asanas/templates/index.html
+++ b/TheYogaApp/asanas/templates/index.html
@@ -1,22 +1,29 @@
 {% extends './base.html' %}
 {% load static %}
 {% block title %}Home{% endblock title %}
-{% block head %}<link rel="stylesheet" href="{% static 'ExerciseAssistant/css/style.css' %}">{% endblock head %}
+{% block head %}
+<link rel="icon" href="https://img.icons8.com/bubbles/50/000000/home-page.png">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+<!-- INLINE STYLESHEET-->
+<style>
+      body{
+            background: rgb(0,0,200,0.5);
+      }
+      .pane{
+            background: white;
+      }
+</style>
+<!-- END STYLESHEET-->
+
+
+{% endblock head %}
 {% block body %}
-    <div class="main">
-      <img src="{% static 'ExerciseAssistant/images/home_img.svg' %}">
-    </div>
-    <div class=text">
-        <p>
-            Physical fitness is the key to mental well-being and a healthier life. Reducing the gap between you
-and your healthy self might pose a problem with traveling, expenses, and pandemics coming up as
-hurdles between you and your trainer.
-This application is aimed at providing perfect guidance for any individual who wants to learn
-exercises all by himself with instruction provided at every step throughout the course.
-The application filters exercises according to different criteria required to complete them efficiently.
-The app will provide commands in a step-by-step fashion leading to the trainee completing the
-exercise. In case the trainee ends up in a wrong posture, the app will notify him, using computer
-vision analysis.
-        </p>
-    </div>
+<div class="container text-dark rounded my-4 shadow-lg pane">
+      <img class="py-3 px-5" src="{% static 'asanas/images/homeimg_1.svg' %}">
+</div>
+<div class="container text-dark rounded my-4 shadow-lg pane">
+      <img class="py-3 px-5" src="{% static 'asanas/images/homeimg_2.svg' %}">
+</div>
 {% endblock body %}
