--- a/TheYogaApp/asanas/templates/base.html
+++ b/TheYogaApp/asanas/templates/base.html
@@ -9,9 +9,9 @@
 {% block body %}
 {% endblock body %}
 <footer>
-    <div class="bg-dark text-light text-center mb-0 bold fon-weight-bold">
-        <p>Copyright &copy; 2022</p>
-        <p>Made with <i class="fa fa-heart" style="color:red;"></i> in <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-india-flag-countrys-flags-justicon-lineal-color-justicon.png" style="width:30;height:30;"></p>
+    <div class="bg-dark text-light text-center mb-0 bold fon-weight-bold py-3">
+        <h5>Copyright &copy; 2022</h5>
+        <h5>Made with <i class="fa fa-heart" style="color:red;"></i> in <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-india-flag-countrys-flags-justicon-lineal-color-justicon.png" style="width:30;height:30;"></h5>
     </div>
 </footer>
 </body>
