--- a/TheYogaApp/asanas/templates/index.html
+++ b/TheYogaApp/asanas/templates/index.html
@@ -20,10 +20,13 @@
 
 {% endblock head %}
 {% block body %}
-<div class="container text-dark rounded my-4 shadow-lg pane">
-      <img class="py-3 px-5" src="{% static 'asanas/images/homeimg_1.svg' %}">
+<div class="container text-dark rounded my-4 shadow-lg pane h-75">
+      <img class="py-3 px-5 h-100 my-auto d-block" src="{% static 'asanas/images/homeimg_1.svg' %}">
 </div>
-<div class="container text-dark rounded my-4 shadow-lg pane">
-      <img class="py-3 px-5" src="{% static 'asanas/images/homeimg_2.svg' %}">
+<div class="container text-dark rounded my-4 shadow-lg pane h-75">
+      <img class="py-3 px-5 h-100" src="{% static 'asanas/images/homeimg_2.svg' %}">
+</div>
+<div class="container text-dark rounded my-4 shadow-lg pane h-75">
+      <img class="py-3 px-5 h-100" src="{% static 'asanas/images/homeimg_3.svg' %}">
 </div>
 {% endblock body %}
