New Frontend Changes

--- a/TheYogaApp/asanas/templates/index.html
+++ b/TheYogaApp/asanas/templates/index.html
@@ -21,12 +21,12 @@
 {% endblock head %}
 {% block body %}
 <div class="container text-dark rounded my-4 shadow-lg pane h-75">
-      <img class="py-3 px-5 h-100 d-block" src="{% static 'asanas/images/homeimg_2.svg' %}" style="position:relative !important; margin-left:55%;">
+      <img class="py-3 h-100 d-block" src="{% static 'asanas/images/homeimg_2.svg' %}" style="position:relative !important; margin-left:55%;">
 </div>
 <div class="container text-dark rounded my-4 shadow-lg pane h-75">
       <img class="py-3 h-100" src="{% static 'asanas/images/homeimg_1.svg' %}" style="position:relative !important; margin-left:-9%;">
 </div>
 <div class="container text-dark rounded my-4 shadow-lg pane h-75">
-      <img class="py-3 px-5 h-100" src="{% static 'asanas/images/homeimg_3.svg' %}" style="position:relative !important; margin-left:54%;">
+      <img class="py-3 h-100" src="{% static 'asanas/images/homeimg_3.svg' %}" style="position:relative !important; margin-left:54%;">
 </div>
 {% endblock body %}
