--- a/TheYogaApp/asanas/templates/index.html
+++ b/TheYogaApp/asanas/templates/index.html
@@ -5,28 +5,57 @@
 <link rel="icon" href="https://img.icons8.com/bubbles/50/000000/home-page.png">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 
 <!-- INLINE STYLESHEET-->
 <style>
       body{
             background: rgb(0,0,200,0.5);
+            font-family: 'Bree Serif', serif;
       }
       .pane{
             background: white;
       }
+      #div1{
+            text-align:left;
+            font-size:60;
+            padding:70 20 20 50;
+            font-weight:bold;
+      }
+      #div2{
+            text-align:right;
+            padding:90 20 20 50;
+            font-size:30;
+      }
+      #div3{
+            text-align:left;
+            padding:70 10 10 50;
+            font-size:30;
+      }
+
 </style>
 <!-- END STYLESHEET-->
 
 
 {% endblock head %}
 {% block body %}
-<div class="container text-dark rounded my-4 shadow-lg pane h-75">
+<div class=" container text-dark rounded my-4 shadow-lg pane h-75" id="div1">
+      <p><h4>EXERCISES DON'T KILL THE FAT,<br>EXCUSES DO<br>START YOUR JOURNEY TOWARDS FITNESS TODAY :)</h4></p>
       <img class="py-3 h-100 d-block" src="{% static 'asanas/images/homeimg_2.svg' %}" style="position:relative !important; margin-left:55%;">
 </div>
-<div class="container text-dark rounded my-4 shadow-lg pane h-75">
-      <img class="py-3 h-100" src="{% static 'asanas/images/homeimg_1.svg' %}" style="position:relative !important; margin-left:-9%;">
+<div class="container text-dark rounded my-4 shadow-lg pane h-75" id="div2">
+      <p>Get step by step assistance on every yoga posture you wish to do along with necessary guidance on correcting the posture</p>
+      <img class="py-3 h-100 d-block" src="{% static 'asanas/images/homeimg_1.svg' %}" style="position:relative !important; margin-left:-9%;">
 </div>
-<div class="container text-dark rounded my-4 shadow-lg pane h-75">
-      <img class="py-3 h-100" src="{% static 'asanas/images/homeimg_3.svg' %}" style="position:relative !important; margin-left:54%;">
+<div class="container text-dark rounded my-4 shadow-lg pane h-75" id="div3">
+      <p>Find all the necessary details regarding your daily fitness!!!
+            <ul>
+                  <li>BMI</li>
+                  <li>Calories Burnt</li>
+                  <li>And Lots more....</li>
+
+            </ul>
+      </p>
+      <img class="py-3 h-100 d-block" src="{% static 'asanas/images/homeimg_3.svg' %}" style="position:relative !important; margin-left:54%;">
 </div>
 {% endblock body %}
