--- a/TheYogaApp/asanas/templates/base.html
+++ b/TheYogaApp/asanas/templates/base.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>The Yoga App | {% block title %}{% endblock title %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     {% block head %}{% endblock head %}
 </head>
 <body>
@@ -11,8 +13,12 @@
       <a class="navbar-brand" href="{% url 'index' %}"><img src="https://img.icons8.com/external-ddara-flat-ddara/64/000000/external-yoga-pose-yoga-poses-ddara-flat-ddara-24.png" class="px-3" style="height:35%; width:35%;"/>The Yoga App</a>
     </div>
       <div>
-          <button type="button" class="btn btn-primary py-1 px-2 mx-2">Login</button>
-          <button type="button" class="btn btn-primary py-1 px-2 mx-2">Register</button>
+          {% if user.is_authenticated %}
+          <button type="button" class="btn btn-primary py-1 px-2 mx-2"><a href="{% url 'logout' %}" class="text-white text-decoration-none">Logout</a></button>
+          {% else %}
+          <button type="button" class="btn btn-primary py-1 px-2 mx-2"><a href="{% url 'login' %}" class="text-white text-decoration-none">Login</a></button>
+          <button type="button" class="btn btn-primary py-1 px-2 mx-2"><a href="{% url 'register' %}" class="text-white text-decoration-none">Register</a></button>
+          {% endif %}
       </div>
   </div>
 </nav>
@@ -24,5 +30,8 @@
         <h5>Made with<img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-heart-web-flaticons-lineal-color-flat-icons-7.png" style="width:30;height:30;" />in <img src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/000000/external-india-flag-countrys-flags-justicon-lineal-color-justicon.png" style="width:22;height:20;margin-left:3px;"></h5>
     </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
