--- a/TheYogaApp/asanas/templates/index.html
+++ b/TheYogaApp/asanas/templates/index.html
@@ -1,11 +1,8 @@
-{% extends './base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block title %}Home{% endblock title %}
 {% block head %}
-<link rel="icon" href="https://img.icons8.com/external-bearicons-outline-color-bearicons/64/000000/external-Home-valentine-love-bearicons-outline-color-bearicons.png">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="https://img.icons8.com/external-bearicons-outline-color-bearicons/64/000000/external-Home-valentine-love-bearicons-outline-color-bearicons.png">
 <!-- INLINE STYLESHEET-->
 <style>
       body{
