--- a/TheYogaApp/asanas/templates/base.html
+++ b/TheYogaApp/asanas/templates/base.html
@@ -10,7 +10,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2 px-5 sticky-top">
   <div class="container-fluid">
     <div class="navbar-header nav-fill">
-      <a class="navbar-brand" href="{% url 'index' %}"><img src="https://img.icons8.com/external-ddara-flat-ddara/64/000000/external-yoga-pose-yoga-poses-ddara-flat-ddara-24.png" class="px-3" style="height:35%; width:35%;"/>The Yoga App</a>
+         {% if user.is_authenticated %}
+            <a class="navbar-brand" href="{% url 'dashboard' %}"><img src="https://img.icons8.com/external-ddara-flat-ddara/64/000000/external-yoga-pose-yoga-poses-ddara-flat-ddara-24.png" class="px-3" style="height:35%; width:35%;"/>The Yoga App</a>
+        {% else %}
+            <a class="navbar-brand" href="{% url 'index' %}"><img src="https://img.icons8.com/external-ddara-flat-ddara/64/000000/external-yoga-pose-yoga-poses-ddara-flat-ddara-24.png" class="px-3" style="height:35%; width:35%;"/>The Yoga App</a>
+        {% endif %}
     </div>
       <div>
           {% if user.is_authenticated %}
