--- a/TheYogaApp/diet/templates/diet/problem_tips.html
+++ b/TheYogaApp/diet/templates/diet/problem_tips.html
@@ -49,8 +49,8 @@ img.blur {
 
   <div class="container text-white mt-4 mb-4">
 
-    <h1 class="display-4">{{ diet.problem.name }} Diet</h1>
-    <p class="lead">Customized diet for {{ diet.problem.name }} patients.</p>
+    <h1 class="display-4">{{ diet.problem }} Diet</h1>
+    <p class="lead">Customized diet for {{ diet.problem }} patients.</p>
     <hr class="my-4">
 <!--    <p>The general diet for a diabetes patient should consist of high protein,high fiber ,low fat and low calorie.</p>-->
     <ul>
