--- a/TheYogaApp/users/templates/login.html
+++ b/TheYogaApp/users/templates/login.html
@@ -116,6 +116,11 @@
         {% endif %}
     {% endfor %}
 {% endif %}
+
+{% if user.is_authenticated %}
+{% else %}
+    <div class="alert alert-danger" role="alert">Please login to continue!</div>
+{% endif %}
 <div class="wrapper">
     <div class="logo"> <img class="p-3" src="https://img.icons8.com/ios/50/000000/gender-neutral-user.png" alt="Logo"></div>
     <div class="text-center mt-4 name">Login</div>
