--- a/TheYogaApp/asanas/templates/yoga.html
+++ b/TheYogaApp/asanas/templates/yoga.html
@@ -24,7 +24,7 @@
 <h1 id="finish" style="font-size:50px; top:-20px; left:910px; position:absolute;"></h1>
 <h1 id="welldone" style="font-size:50px; top:35px; left:910px; position:absolute;"></h1>
 <div class="parent">
-  <h1 id="poseName" class="child" style="font-size: 100px; text-align:center;"><span>Tree</span></h1>
+  <h1 id="poseName" class="child" style="font-size: 100px; text-align:center;"><span></span></h1>
 </div>
 <img id="poseImg" src="{% static 'asanas/images/mountain.svg' %}" style="width:340px; height:340px; position: absolute; left:950px; top: 280px;">
 <h1 style="font-size: 100px; top:520px; left:1000px"><span id="time">00:10</span></h1>
