--- a/TheYogaApp/asanas/templates/dashboard.html
+++ b/TheYogaApp/asanas/templates/dashboard.html
@@ -19,11 +19,39 @@ body{
         <div class="alert alert-info" role="alert">{{ message }}</div>
     {% endfor %}
 {% endif %}
+<!------- COURSE SECTION ------->
+<section>
     <h1 class="d-block mx-5 p-3">Courses</h1>
     <div class="container shadow m-auto p-3 mb-5 rounded bg-light w-100 d-flex justify-content-between flex-wrap">
         {% for asan in asana %}
+            <div>
             <img src="{{ asan.image }}" alt="{{ asan.name }}" height="200" width="150" class="shadow bg-light mt-3">
+                <p class="text-center"><b>{{ asan.name }}</b></p>
+            </div>
         {% endfor %}
         <div class="align-self-center"><a href="{% url 'yoga' %}"><button class="btn btn-primary px-5 py-2 m-3">Start</button></a></div>
     </div>
+</section>
+
+<!------- DIET SECTION ------->
+<section>
+    <h1 class="d-block mx-5 p-3">Diet Recommendations</h1>
+        <div class="container w-100">
+            {% for diet in diet %}
+            <div class="container shadow bg-light p-3 my-5 rounded">
+                {% if diet.problem != 'None' %}
+                    <h3 class="d-block text-center mb-4 text-uppercase"><u>{{ diet.problem }}</u></h3>
+                <div class="alert alert-danger text-uppercase"><img src="https://img.icons8.com/ios/30/000000/error--v1.pn"/><b>  note: this diet is for general {{ diet.problem }} patients. Please consult professional nutritionist for personalized diet.</b></div>
+                {% else %}
+                    <h3 class="d-block text-center mb-4 text-uppercase"><u>General</u></h3>
+                {% endif %}
+                <ol>
+                {% for tip in diet.tips_list %}
+                    <li style="font-size:1.4rem;">{{ tip }}</li>
+                {% endfor %}
+                </ol>
+            </div>
+            {% endfor %}
+        </div>
+</section>
 {% endblock body %}
