Integrated Diet on Dashboard

--- a/TheYogaApp/users/templates/register.html
+++ b/TheYogaApp/users/templates/register.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block title %}Register{% endblock title %}
 {% block head %}
+<link rel="icon" href="https://img.icons8.com/external-filled-outline-geotatah/64/000000/external-register-training-management-system-filled-outline-filled-outline-geotatah.png">
 
 <!-- INLINE CSS -->
 <style>
