--- a/TheYogaApp/asanas/templates/dashboard.html
+++ b/TheYogaApp/asanas/templates/dashboard.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block title %}Dashboard{% endblock title %}
 {% block head %}
+<link rel="icon" href="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-dashboard-100-most-used-icons-flaticons-lineal-color-flat-icons.png">
 {% endblock head %}
 {% block body %}
 
@@ -11,6 +12,44 @@
 body{
     background: rgb(0,0,200,0.5);
 }
+    .innerContainer {
+      width: 450px;
+      height: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .circle {
+      border-radius: 50%;
+      background-color: rgb(0,0,200,0.3);
+      width: 150px;
+      height: 150px;
+      position: absolute;
+      opacity: 0;
+      animation: scaleIn 4s infinite cubic-bezier(.36, .11, .89, .32);
+    }
+
+    .item {
+      z-index: 100;
+      padding: 5px;
+    }
+
+    .item img {
+      width: 150px;
+    }
+    @keyframes scaleIn {
+      from {
+        transform: scale(.5, .5);
+        opacity: .5;
+      }
+      to {
+        transform: scale(2.5, 2.5);
+        opacity: 0;
+      }
+}
 </style>
 <!--END CSS-->
 
@@ -19,6 +58,7 @@ body{
         <div class="alert alert-info" role="alert">{{ message }}</div>
     {% endfor %}
 {% endif %}
+
 <!------- COURSE SECTION ------->
 <section>
     <h1 class="d-block mx-5 p-3">Courses</h1>
@@ -32,6 +72,61 @@ body{
         <div class="align-self-center"><a href="{% url 'yoga' %}"><button class="btn btn-primary px-5 py-2 m-3">Start</button></a></div>
     </div>
 </section>
+
+<!------- CALCULATIONS SECTION ------->
+<section>
+    <h1 class="d-block mx-5 p-3">Body Type</h1>
+    <div class="container d-flex mb-5">
+        <div class="outerContainer">
+            <div class="innerContainer">
+                <div class="item">
+                    <div class="rounded-circle text-center text-light bg-dark" style="height:150px; width: 150px; padding-top:35px; font-size:1.4rem;"><b>{{bmr}}<br/>KCal/Day</b></div>
+                </div>
+            <div class="circle" style="animation-delay: 0s"></div>
+            <div class="circle" style="animation-delay: 1s"></div>
+            <div class="circle" style="animation-delay: 2s"></div>
+            <div class="circle" style="animation-delay: 3s"></div>
+            </div>
+            <h4 class="d-block w-100 text-center text-wrap">Basal Metabolic Rate(BMR)</h4>
+        </div>
+        <div class="outerContainer">
+            <div class="innerContainer">
+                <div class="item">
+                    <div class="rounded-circle text-center text-light bg-dark" style="height:150px; width: 150px; padding-top:35px; font-size:1.4rem;"><b>{{bmi}}<br/>{{ bodytype }}</b></div>
+                </div>
+            <div class="circle" style="animation-delay: 0s"></div>
+            <div class="circle" style="animation-delay: 1s"></div>
+            <div class="circle" style="animation-delay: 2s"></div>
+            <div class="circle" style="animation-delay: 3s"></div>
+            </div>
+            <h4 class="d-block w-100 text-center text-wrap">Body Mass Index(BMI)</h4>
+        </div>
+        <div class="outerContainer">
+            <div class="innerContainer">
+                <div class="item">
+                    <div class="rounded-circle text-center text-light bg-dark" style="height:150px; width: 150px; padding-top:35px; font-size:1.4rem;"><b>{{amr}}<br/>KCal/Day</b></div>
+                </div>
+            <div class="circle" style="animation-delay: 0s"></div>
+            <div class="circle" style="animation-delay: 1s"></div>
+            <div class="circle" style="animation-delay: 2s"></div>
+            <div class="circle" style="animation-delay: 3s"></div>
+            </div>
+            <h4 class="d-block w-100 text-center text-wrap">Active Metabolic Rate(AMR)</h4>
+        </div>
+    </div>
+    <div class="container bg-light rounded shadow p-3 mb-5">
+        <ul style="list-style-type: none; font-size:1.4rem;">
+        {% for item in type %}
+            {% if item == 'TIPS' %}
+            <li class="text-center"><b><u>{{ item }}</u></b></li>
+            {% else %}
+            <li>• {{ item }}</li>
+            {% endif %}
+        {% endfor %}
+        </ul>
+    </div>
+</section>
+
 
 <!------- DIET SECTION ------->
 <section>
