--- a/TheYogaApp/asanas/templates/yoga.html
+++ b/TheYogaApp/asanas/templates/yoga.html
@@ -4,6 +4,7 @@
 {% block title %}Yoga{% endblock title %}
 
 {% block head %}
+<link rel="icon" href="https://img.icons8.com/external-vitaliy-gorbachev-lineal-color-vitaly-gorbachev/60/000000/external-yoga-health-vitaliy-gorbachev-lineal-color-vitaly-gorbachev-1.png">
 <script src="{% static 'asanas/js/p5.min.js' %}"></script>
 <script src="{% static 'asanas/js/ml5.min.js' %}"></script>
 <script src="{% static 'asanas/js/learn.js' %}"></script>
