--- a/TheYogaApp/users/templates/login.html
+++ b/TheYogaApp/users/templates/login.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block title %}Login{% endblock title %}
 {% block head %}
+<link rel="icon" href="https://img.icons8.com/bubbles/50/000000/login-rounded-right.png">
 
 <!-- INLINE CSS -->
 <style>
